--- a/style.css
+++ b/style.css
@@ -9,7 +9,6 @@ html {
 }
 
 body {
-  color: #fff;
   margin: 0;
   min-height: 100vh;
   font-family: montserrat, sans-serif;
@@ -75,9 +74,91 @@ z-index: 2;
     flex-direction: column;
   }
 }
-
+/* Modal */
+.modal-container{
+  background: rgba(0, 0, 0, 0.6);
+  display: none;
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
+}
+.show-modal{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.modal{
+  background: whitesmoke;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.8);
+  max-width: 95%;
+  width: 500px;
+  animation: modalopen 2s;
+}
+@keyframes modalopen{
+  from{
+    opacity: 0;
+  }
+  to{
+    opacity: 1;
+  }
+}
+.fa-regular{
+  float: right;
+  color: white;
+  font-size: 24px;
+  position: relative;
+  top: 13px;
+  right: 13px;
+  cursor: pointer;
+}
+.modal-header{
+  background: var(--primary-color);
+  color: white;
+  padding: 15px;
+}
+h3{
+  margin: 0;
+}
+.modal-content{
+  padding: 20px;
+  background: whitesmoke;
+}
+/* Form */ 
+.form-group{
+  height: 55px;
+}
+.form-input{
+  width: 97%;
+  padding: 5px;
+  border: 2px solid var(--primary-color);
+  display: block;
+  outline: none;
+}
+.form-label{
+  color: var(--primary-color);
+  display: block;
+}
+button{
+  cursor: pointer;
+  color: white;
+  background: var(--primary-color);
+  height: 30px;
+  width: 100px;
+  border: none;
+  border-radius: var(--border-radius);
+  margin-top: 10px;
+}
+button:hover{
+  filter: brightness(110%);
+}
+button:focus{
+  outline: none;
+}
 .credits {
   font-weight: 600;
   font-family: sofia, cursive;
   font-size: 2rem;
+  margin-top: 700px;
 }
